# Pytteliten

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  main.cpp  minified.cpp  minifier.py  pytteliten.cpp
.github/workflows/: check-size.yml
minifier/: minifier.md  minifier.py
